[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-env"
version = "1.0.0"
description = "Email Response Environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
]

[tool.openenv]
entry_point = "env.environment:EmailEnv"